# tremolo

./: .gitignore  CMakeLists.txt  Setup.bat  build.bat  setup.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
